--- a/count.html
+++ b/count.html
@@ -150,7 +150,8 @@
   </style>
 </head>
 <body>
-  <h1>大老二計分</h1>
+
+  <br>
 
   <!-- 規則顯示區 -->
   <div class="rules" id="rulesDisplay">規則：讀取中...</div>
@@ -161,6 +162,8 @@
       <button id="player3Btn">玩家 3</button>
       <button id="player4Btn">玩家 4</button>
   </div>
+
+  <h1>點選贏家開始計分</h1>
 
   <!-- 遮罩 & modal -->
   <div class="overlay" id="overlay"></div>
